# nexusshell

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_engine.rs  keychain.rs  lib.rs  main.rs  market.rs  oauth.rs  odysseus.rs  operator.rs  skills.rs  studio.rs  vault.rs
src/components/: AgentOps.tsx  ApiVault.tsx  BrainCore.tsx  ChatNexus.tsx  ConnectionsView.tsx  HomeWidgets.tsx  NavRail.tsx  OdysseusView.tsx  SettingsPanel.tsx  SocialConnect.tsx  Sparkline.tsx  StatsHub.tsx  StudioView.tsx  TradingFloor.tsx  WorkspaceView.tsx  Workstation.tsx  WorkstationGrid.tsx
src/lib/: agentRunner.ts  db.ts  keychain.ts  live.ts  mock.ts  textures.ts  trading.ts
src/state/: store.ts
src/styles/: global.css
